--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "version"      : "0.0.1-beta.1",
     "description"  : "A node-red node to analyse the memory consumption of the nodes.",
     "dependencies": {
-       "object-sizeof": "1.3.0"
+       "object-sizeof": "1.3.0",
+        "wildstring": "1.0.9"
     },
     "author": {
         "name": "Bart Butenaers"
